# FrogLips

./: .env.example  .gitignore  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  EULA.md  LICENSE  README.md  SECURITY.md  detached.html  index.html  package-lock.json  package.json  playwright.config.ts  quick.html  release-please-config.json  rust-toolchain.toml  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: AGENT_LAYER.md  ARCHITECTURE.md  AUDIT-2026-06.md  DEV_WORKFLOWS_2026-06.md  Froglips-User-Guide.docx  IMAGE_GEN_REMEDIATION.md  LAUNCH.md  MATURITY_STUDY_2026-06.md  POSSIBILITY-headless-cli.md  RELEASE_PROCESS.md  REVIEW-2026-06-17.md  REVIEW-2026-06.md  ROUTER_DESIGN.md  SECURITY_WORKFLOWS_2026-06.md  USER_GUIDE.md  _config.yml
docs/adr/: 0001-tauri-2-rust-react.md  0002-macos-only-first.md  0003-local-first-no-telemetry.md  0004-result-string-error-model.md  0005-mcp-as-extension-mechanism.md  0006-workflow-run-state-lifted-to-app.md  README.md
docs/research/: llamacpp-backend.md
e2e/: a11y-smoke.spec.ts  abort-mid-stream.spec.ts  agent-confirm-deny.spec.ts  agent-deny-midrun.spec.ts  agent-dry-run.spec.ts  export-conversation.spec.ts  memory-save.spec.ts  model-download-flow.spec.ts  new-chat.spec.ts  preset-switch.spec.ts  send-message.spec.ts  settings-open.spec.ts  tool-exec.spec.ts  tsconfig.json
e2e/fixtures/: tauri-mock.ts
scripts/: check-bundle-budget.mjs  first-run.sh  release.sh
src/: App.css  App.tsx  main-detached.tsx  main-quick.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  deny.toml  policy-matcher-fixture.json  security-manifest.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent_audit.rs  approval.rs  ask_user.rs  backend_process.rs  claude_skills.rs  crash_log.rs  custom_backend.rs  data_backup.rs  diagnostics.rs  dictation.rs  download_registry.rs  embedder.rs  gguf.rs  health.rs  history.rs  keychain.rs  lib.rs  logging.rs  main.rs  maintenance.rs  memory.rs  messaging.rs  mlx_server.rs  models.rs  native_inference.rs  net.rs  novita.rs  ollama_library.rs  policy.rs  quick_prompt.rs  rag.rs  roundtable.rs  security_manifest.rs  settings.rs  sse_decode.rs  stream_cancel.rs  task_queue.rs  util.rs  workflow_skills.rs  (+1 more)
src-tauri/src/agent/: browser.rs  code.rs  computer.rs  extras.rs  fs.rs  fs_watcher.rs  git.rs  injection_scan.rs  mod.rs  shell.rs  snapshot.rs  system.rs  web.rs
src-tauri/src/commands/: agent.rs  claude_skills.rs  data.rs  history.rs  image.rs  llmpm.rs  lora.rs  maintenance.rs  mcp.rs  memory.rs  messaging.rs  misc.rs  mod.rs  models.rs  modelscope.rs  path_safety.rs  roundtable.rs  server.rs  workflow_skills.rs  workflows.rs
src-tauri/src/image_gen/: engine.rs  lora.rs  metadata.rs  mod.rs  stub.rs
src-tauri/src/image_gen/qwen_image/: config.rs  mod.rs  pipeline.rs  rope.rs  scheduler.rs  text_encoder.rs  transformer.rs  vae.rs  weights.rs
src-tauri/src/mcp/: mod.rs  oauth.rs
src-tauri/src/messaging/: discord.rs  email.rs  matrix.rs  mattermost.rs  mod.rs  slack.rs  telegram.rs
src-tauri/src/native_inference/: llamacpp_backend.rs  mistralrs_backend.rs  mod.rs  stub.rs
src/components/: AboutYouModal.tsx  AgentSettingsPanel.tsx  AgentToolbar.tsx  ApiRegistrySettings.tsx  AppearanceModal.tsx  AuditLog.tsx  BrandMark.tsx  ChatInput.tsx  ChatWindow.tsx  ClaudeSkillsPanel.tsx  CollapsibleSidebar.tsx  CommandPalette.tsx  CompareView.tsx  ConfirmDialog.tsx  ContextMeter.tsx  ContextRolloverBanner.tsx  CustomBackendsSettings.tsx  Dashboard.tsx  DetachedChatView.tsx  DiagnosticsPanel.tsx  EmptyChatLanding.tsx  EmptyState.tsx  ErrorBar.tsx  ErrorBoundary.tsx  ExportMenu.tsx  FirstRunTour.tsx  ForkTree.tsx  HardwareWarningBanner.tsx  HistorySearch.tsx  HuggingFaceLibraryView.tsx  ImageView.tsx  KnowledgeView.tsx  LiveRegion.tsx  LlmpmPanel.tsx  McpSettings.tsx  McpView.tsx  MemoryPanel.tsx  MessageList.tsx  MessagingView.tsx  ModelBrowser.tsx  (+16 more)
src/components/__tests__/: AgentToolbar.test.tsx  AuditLog.test.tsx  ChatInput.test.tsx  CommandPalette.test.tsx  Dashboard.test.tsx  DiagnosticsPanel.test.tsx  HuggingFaceLibraryView.loader.test.ts  HuggingFaceLibraryView.test.tsx  MemoryPanel.test.tsx  MessageList.fork.test.tsx  ModelBrowser.gguf.test.tsx  OllamaLibraryView.test.tsx  PrivacyPanel.test.tsx  QuickPrompt.test.tsx  (+4 more)
src/contexts/: SettingsContext.tsx
src/hooks/: useAgentSettings.ts  useAppearance.ts  useAskUserModal.ts  useChatSend.ts  useCitationOpener.ts  useCommitOnUnmount.ts  useCompare.ts  useConversations.ts  useEvent.ts  useHardwareProfile.ts  useImageGeneration.ts  useMessageActions.ts  useMessagingGateway.ts  usePersistedState.ts  usePlatformChrome.ts  useQuickPromptToast.ts  useRamPressure.ts  useTauriEvent.ts  useUpdateCheck.ts  useVirtualList.ts  useWindowGeometry.ts
src/lib/: agent-loop.ts  agent-name.ts  agent-presets.ts  announce.ts  appearance.ts  auto-continue.ts  brand-icons.ts  bubble-color.ts  chat-model-filter.ts  chat-router.ts  cloud-tags.ts  conversation-params.ts  conversation-tags.ts  custom-client.ts  detached-params.ts  diagnostics.ts  export.ts  format.ts  hardware-profile.ts  hardware-recommend.ts  inference-gate.ts  markdown.ts  mcp-servers.ts  memory-client.ts  messaging-policy.ts  mlx-client.ts  model-capabilities.ts  model-capability-lookup.ts  model-context-lookup.ts  native-client.ts  novita-client.ts  ollama-plain-client.ts  openai-messages.ts  prompt-templates.ts  reply-stats.ts  signal-utils.ts  stream-lines.ts  syntax-theme.ts  tauri-api.ts  updater.ts  (+3 more)
src/styles/: appearance.css  chat.css  components.css  images.css  layout.css  markdown-extras.css  mcp.css  messaging.css  modals.css  panels.css  premium.css  quick.css  roundtable.css  sidebars.css  skills-tools.css  syntax.css  tokens.css  ui.css  workflows.css
(+180 files in other folders)
