[package]
name = "local-llm-app"
version = "0.14.22"
description = "Froglips — local LLM chat, MLX backend"
authors = ["Joseph D Eritano"]
edition = "2021"
rust-version = "1.96"
license = "MIT"

[lib]
name = "local_llm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# `test` feature exposes `tauri::test::mock_app` for unit-testing the
# WebviewWindow plumbing in lib.rs (multi_window_tests).
#
# Verified safe: Cargo unifies features *per-target*, so dev-dep feature flags
# (here, "test") do NOT propagate into release/runtime builds.
# `cargo tree --edges normal -e features` shows zero occurrences of
# `tauri feature "test"` outside the dev-deps subtree, confirming the
# tray-icon-only feature set is what ships. No `[features] test-utils = …`
# refactor needed; this comment is the documentation requested by the audit.
tauri = { version = "2", features = ["tray-icon", "test"] }
tempfile = "3"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Native dictation (2026-06-11): WKWebView has no speech-recognition
# permission delegate in wry, so webkitSpeechRecognition is default-denied
# inside the webview and never reaches TCC. Dictation is implemented
# app-side instead: AVAudioEngine mic tap -> SFSpeechRecognizer (on-device
# when supported), partial transcripts streamed to the frontend as events.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = "0.3"
objc2-speech = "0.3"
objc2-avf-audio = "0.3"
objc2-av-foundation = "0.3"
# Audit A28: encrypted-at-rest API-key storage in the login Keychain (replaces
# the 0600 plaintext file as the default). In-process Security.framework, so the
# item ACL binds to the notarized Developer ID signature — stable across launches
# (the ad-hoc-resign ACL churn that drove the original file choice is gone).
security-framework = "2"
# Computer Use (2026-06-16): CGEvent mouse/keyboard/scroll synthesis +
# CGDisplay geometry for the gated desktop-control driver (agent/computer.rs).
# Both crates are already in the resolved tree via objc2-core-graphics, so this
# adds no new download — it just makes the ergonomic CGEvent API explicit.
# Accessibility TCC (AXIsProcessTrusted) is checked via a CoreFoundation option
# dictionary, hence the direct core-foundation dep.
# `highsierra` gates CGEvent::new_scroll_event (CGEventCreateScrollWheelEvent2),
# which the cu_scroll tool needs; the macOS floor is 13.0 so it's always present.
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"


[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
# sqlite-vec: vec0 virtual-table ANN index for RAG + memory vector search.
# Registered as an auto-extension via `rusqlite::ffi::sqlite3_auto_extension`
# (available with rusqlite's `bundled` feature — no `loadable_extension`
# feature needed, so no separate dylib ships and notarization is unaffected).
# BLOB columns remain the source of truth; vec0 tables are a derived,
# rebuildable index with a verbatim linear-scan fallback.
sqlite-vec = "0.1"
r2d2 = "0.8"
once_cell = "1"
parking_lot = "0.12"
url = "2"
regex = "1"
# `blocking` is required by embedder.rs (probe/embed singleton clients). It was
# previously satisfied transitively; a dependency-resolution drift dropped it,
# so it is declared explicitly here (version-independent, fail-closed).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "stream", "json", "blocking"] }
futures = "0.3"
base64 = "0.22"
getrandom = "0.2"
pdf-extract = "0.7"
html2text = "0.13"
sha2 = "0.10"
# Diagnostics bundle: a real .zip the user can attach to a bug report (was a
# concatenated text file mislabeled `.zip`). default-features off + `deflate`
# only pulls the pure-Rust flate2/zlib-rs backend — no C dependency, so
# notarization is unaffected and no extra dylib ships.
zip = { version = "8", default-features = false, features = ["deflate"] }
notify = "8"
globset = "0.4"
scraper = "0.20"
# Messaging gateway connectors (2026-06-16). All rustls / pure-Rust — no OpenSSL
# or C deps, so the notarized bundle is unaffected.
#  • tokio-tungstenite: WebSocket client for the Discord/Slack/Mattermost gateways.
#  • async-imap + tokio-rustls + webpki-roots: IMAP receive for the Email channel.
#  • lettre: SMTP send for the Email channel.
#  • mail-parser: parse fetched RFC822 messages.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
mail-parser = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Native inference — fast in-process LLM on Apple Silicon: mistralrs +
# candle + Metal. Build with --features native-mistralrs.
# Pinned to 0.8.1 from crates.io.
mistralrs-core = { version = "=0.8.1", default-features = false, features = ["metal", "accelerate"], optional = true }
# Candle-core provides the tensor / device types used by the native backend
# (mistralrs_backend::candle_device). The full mistralrs feature re-uses the
# same crate (matched version, no duplicate compile).
candle-core = { version = "0.10", default-features = false, features = ["metal", "accelerate"] }
indexmap = { version = "2", optional = true }
either = { version = "1", optional = true }
# `serde_yaml` is used by both the native-mistralrs chat-template parser and
# the (always-on) Claude Skills frontmatter parser. The crate ships with no
# default features, so a direct dep is cheap and avoids depending on a
# feature-flag transitive path. Listed once at the top level instead of as
# `optional = true` so the dep graph stays uniform across feature sets.
serde_yaml = "0.9"

# Browser automation (alpha) — agent-controlled headless Chrome via CDP.
# Enabled via the "browser-automation" feature; requires a Chrome/Chromium
# binary on the user's machine (chromiumoxide does NOT bundle one).
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
# Umbrella flag — no-op base. Real backends opt in below.
native-inference = []
native-mistralrs = ["native-inference", "dep:mistralrs-core", "dep:indexmap", "dep:either"]
browser-automation = ["dep:chromiumoxide", "dep:futures-util"]

# Optimized release profile for the shipped desktop bundle. opt-level=3 (not
# "z") — this is a latency-sensitive GUI + in-process inference path, so we
# prefer speed over the marginal size win. lto + single codegen-unit maximize
# cross-crate inlining; strip drops debug symbols from the binary.
# NOTE: panic = "unwind" (the default) is kept deliberately — the agent runs
# arbitrary tool/shell/code paths and a panic in a tokio task must stay
# isolated/recoverable (surface as an error) rather than aborting the whole
# process. The size win from panic=abort is not worth that regression.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
